@@ -1,3 +1,10 @@
+2008-11-03  Bean  <bean123ch@gmail.com>
+
+	* kern/elf.c (grub_elf32_load): Revert to previous code.
+	(grub_elf64_load): Likewise.
+
+	* loader/i386/bsd.c (grub_bsd_elf32_hook): Change return address.
+
 2008-11-01  Robert Millan  <rmh@aybabtu.com>
 
 	* Makefile.in (CPPFLAGS): Fix builddir=. assumption.
